--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
     <a href="professionalSummary.html" target="My frame">Professional Summary</a>&nbsp;&nbsp;
     <a href="Project.html" target="My frame">Project</a>&nbsp;&nbsp;
     <a href="myHobbies.html" target="My frame">Hobbies</a>&nbsp;&nbsp;
-<hr>
+    <hr>
     <br>
-    
+
     <iframe width="900" height="500" name="My frame"> </iframe>
     <br>
     <br>
     <br>
     <b> Follow me</b>
-    <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;&nbsp;
-    <i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;
-    <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;&nbsp;
-    <i class="fa fa-google" aria-hidden="true"></i>
+    <i class="fa fa-instagram" aria-hidden="true"></a>&nbsp;&nbsp;
+        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;
+            <a href="https://www.linkedin.com/login" target="_blank"><i class="fa fa-linkedin"
+                    aria-hidden="true"></i>&nbsp;&nbsp;
+                <a href="https://www.google.com/" target="_blank"><i class="fa fa-google"
+                        aria-hidden="true"></i>&nbsp;&nbsp;
+
+
+
 </body>
 
 
