Index Page Updated
Added Contact link

--- a/index.html
+++ b/index.html
@@ -9,41 +9,42 @@
 
 <body>
     <header>
-        <div>
-            <i class="fa fa-user" aria-hidden="true"></i> Pooja Aldar &nbsp; &nbsp; &nbsp;
-            <i class="fa fa-envelope" aria-hidden="true"></i> poojaaldar@gmail.com &nbsp; &nbsp; &nbsp;
-            <i class="fa fa-mobile" aria-hidden="true"></i> 9096110126
-        </div>
+
+        <i class="fa fa-user" aria-hidden="true"></i> Pooja Aldar &nbsp; &nbsp; &nbsp;
+        <i class="fa fa-envelope" aria-hidden="true"></i> poojaaldar@gmail.com &nbsp; &nbsp; &nbsp;
+        <i class="fa fa-mobile" aria-hidden="true"></i> 9096110126
+
     </header>
     <br>
     <br>&nbsp;&nbsp;
-
-    <a href="personal.html" target="My frame">Home</a>&nbsp;&nbsp;
-    <a href="techStack.html" target="My frame">TechStack</a>&nbsp;&nbsp;
-    <a href="education.html" target="My frame">Education</a>&nbsp;&nbsp;
-    <a href="professionalSummary.html" target="My frame">Professional Summary</a>&nbsp;&nbsp;
-    <a href="Project.html" target="My frame">Project</a>&nbsp;&nbsp;
-    <a href="myHobbies.html" target="My frame">Hobbies</a>&nbsp;&nbsp;
-
+    <nav>
+        <a href="personal.html" target="My frame">Home</a>&nbsp;&nbsp;
+        <a href="techStack.html" target="My frame">TechStack</a>&nbsp;&nbsp;
+        <a href="education.html" target="My frame">Education</a>&nbsp;&nbsp;
+        <a href="professionalSummary.html" target="My frame">Professional Summary</a>&nbsp;&nbsp;
+        <a href="Project.html" target="My frame">Project</a>&nbsp;&nbsp;
+        <a href="myHobbies.html" target="My frame">Hobbies</a>&nbsp;&nbsp;
+        <a href="contactUs.html" target="My frame">Contact Us</a>
+    </nav>
     <hr>
     <br>
 
-    <iframe width="900" height="500" name="My frame"> </iframe>
+    <iframe width="900" height="500" name="My frame" src="contactUs.html"> </iframe>
     <br>
     <br>
     <br>
     <footer>
-        <div>
-            <b> Follow me</b>&nbsp;&nbsp;&nbsp;
-            <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram"
-                    aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://www.linkedin.com/login" target="_blank"><i class="fa fa-linkedin"
-                    aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://www.google.com/" target="_blank"><i class="fa fa-google"
-                    aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://www.facebook.com/login/" target="_blank"><i class="fa fa-facebook-square"
-                    aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
-        </div>
+
+        <b> Follow me</b>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram"
+                aria-hidden="true"></i></a> &nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/login" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://www.google.com/" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://www.facebook.com/login/" target="_blank"><i class="fa fa-facebook-square"
+                aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+
     </footer>
 
 </body>
