--- a/professionalSummary.html
+++ b/professionalSummary.html
@@ -3,15 +3,24 @@
 
 <head>
     <title> Professional Summery </title>
+    <style>
+h3{
+    color:blue;
+    background-color: rgba(255, 217, 0, 0.779);
+}
+    </style>
 </head>
 
 <body>
-    <h3> <u> Professional Summery </u> </h3>
+    <h3> Carrer Objectives </h3>
+    To Work in organization where i can learn and Grow My skills and help organisational growth.
 
+
+    <h3> <u> Professional Summery </u> </h3>
     <ul>
-        <li> Having 1 years of experience in developing Single page Web Application using Angular 8, HTML5
-            CSS3, Bootstrap 5, JavaScript, TypeScript </li>
-        <li> Experience on working with version control system - GIT and GitHub </li>
+        <li> Having 1 years of experience in developing Single page Web Application using <span style="color:blue;"> Angular 8 </span> , HTML5
+            CSS3, Bootstrap 5, JavaScript, TypeScript. </li>
+        <li> Experience on working with version control system -<span style="color:blue;"> GIT and GitHub</span> </li>
         <li> Experience Working with JIRA for user stories and bug tracking </li>
         <li> Strong Debugging & Troubleshooting code experince using Chrome Developer Tool </li>
         <li> Working exposure on ID's like VS Code and Notepad++ </li>
@@ -21,7 +30,7 @@
         <li> Ability to work with people at all levels in the program</li>
 
     </ul>
-<hr>
+    <hr>
 
 
 </body>
