Updating Index File
Changing background colour for heading line

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <header>
+    <header style="background-color:cadetblue;">
 
-        <i class="fa fa-user" aria-hidden="true"></i> Pooja Aldar &nbsp; &nbsp; &nbsp;
-        <i class="fa fa-envelope" aria-hidden="true"></i> poojaaldar@gmail.com &nbsp; &nbsp; &nbsp;
-        <i class="fa fa-mobile" aria-hidden="true"></i> 9096110126
+        <i class="fa fa-user" aria-hidden="true" ></i> <b>Pooja Aldar</b>  &nbsp; &nbsp; &nbsp;
+        <i class="fa fa-envelope" aria-hidden="true"></i> <b>poojaaldar@gmail.com</b>  &nbsp; &nbsp; &nbsp;
+        <i class="fa fa-mobile" aria-hidden="true"></i> <b>9096110126</b> 
 
     </header>
     <br>
@@ -28,12 +28,10 @@
     </nav>
     <hr>
     <br>
-
     <iframe width="900" height="500" name="My frame" src="contactUs.html"> </iframe>
     <br>
     <br>
-    <br>
-    <footer>
+    <footer>   
 
         <b> Follow me</b>&nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram"
