--- a/professionalSummary.html
+++ b/professionalSummary.html
@@ -26,7 +26,7 @@ h3{
         <li> Working exposure on ID's like VS Code and Notepad++ </li>
         <li> Good Working experience under Agile methodologies environmenyt </li>
         <li> Experience in using Chrome Developer Tool for debugging and troushooting the code </li>
-        <li> Knowledge of NodeJS </li>
+        <li> Knowledge of <span style="font-size:large;"> NodeJS</span>  </li>
         <li> Ability to work with people at all levels in the program</li>
 
     </ul>
@@ -35,4 +35,4 @@ h3{
 
 </body>
 
-</html>
+</html> 
