--- a/internalCSS.html
+++ b/internalCSS.html
@@ -3,34 +3,50 @@
 
 <head>
     <title> Internal CSS </title>
-<style>
-    #Objectives {
-        color: blue;
-    }
-    p{
-       color:darkblue;
-font-size: large;
-    }
-</style>
+    <style>
+        #Objectives {
+            color: rgb(50, 50, 134);
+        }
+
+        p {
+            color: darkblue;
+            font-size: large;
+            text-transform: uppercase;
+            font-weight: bolder;
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        .myClass,
+        h2 {
+            text-align: center;
+            color: brown;
+            font-size: large;
+        }
+
+        /* this is importat section for resume preparation */
+    </style>
 </head>
 
 <body>
 
-    <h2 id="Objectives">  Career Objectives </h2>
+    <h2 id="Objectives"> Career Objectives </h2>
     <hr>
     <p>
         <strong> Seeking </strong> a <b> challenging</b> and <u> rewarding career </u>
         in a reputed organization where my <mark> technical skills </mark>
-        would make  &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br> and <small>guide me </small> in building a rewarding
+        would make &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br> and <small>guide me </small> in
+        building a rewarding
         career at the same time enhancing my knowledge of <i> industry wide processes. </i>
     </p>
 
     <hr>
-    <h2> Professional Summary </h2>
-    <p> 
-        &nbsp; &nbsp; &nbsp; &nbsp; Experience in using Chrome Developer Tool for debugging and Troubleshooting the code <br>
-        &nbsp; &nbsp; &nbsp; &nbsp;  Knowledge of NodeJS <br>
+    <h2 class="myClass"> Professional Summary </h2>
+    <p class="myClass">
+        &nbsp; &nbsp; &nbsp; &nbsp; Experience in using Chrome Developer Tool for debugging and Troubleshooting the code
+        <br>
+        &nbsp; &nbsp; &nbsp; &nbsp; Knowledge of NodeJS <br>
         &nbsp; &nbsp; &nbsp; &nbsp; Ability to work with people at all levels in the program
     </p>
 </body>
+
 </html>
