--- a/personal.html
+++ b/personal.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<title>Personal Details </title>
-    </head>
 
-    <body>
-<h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Profile Photo </h3>
+<head>
+    <title>Personal Details </title>
+    <style>
+        #title {
+            color: rgb(68 117 119);
+        }
 
-<img src="Profile pic.png" width="200px" height="200px">
-<br>
-<br>
-<hr>
-<b> Name: </b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ms. Pooja B. Aldar <br>
-<b> Mobile No: </b> 9096110126 <br>
-<b> Email Id: </b>&nbsp;&nbsp; poojaaldar@gmail.com  <br>
-<b> DOB: </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Jun-09-1997 <br>
-<b> Address: </b> &nbsp;&nbsp;&nbsp;&nbsp;Navi Mumbai <br>
-<details>  
-    <summary>Family Details</summary> 
+        b{
+            text-transform: uppercase;
+            color: rgb(68 117 119)
+        }
+    </style>
 
-<ul> 
-   <li> Father Name : Bhimrao Aldar</li> 
-   <li>  Mother Name : Malan Aldar </li> 
-</ul>
-</details>
-    </body>
+
+</head>
+
+<body>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 id="title">PROFILE PHOTO</h3>
+
+    <img src="Profile pic.png" width="200px" height="200px">
+    <br>
+    <br>
+    <hr>
+    <b> Name: </b>Ms. Pooja B. Aldar <br>
+    <b> Mobile No:</b> 9096110126 <br>
+    <b> Email Id:</b>poojaaldar@gmail.com <br>
+    <b> DOB: </b>Jun-09-1997 <br>
+    <b> Address: </b>Navi Mumbai <br>
+
+    <br>
+    <details>
+        <summary>Family Details</summary>
+
+        <ul>
+            <li> Father Name : Bhimrao Aldar</li>
+            <li> Mother Name : Malan Aldar </li>
+        </ul>
+    </details>
+</body>
+
 </html>
