--- a/professionalSummary.html
+++ b/professionalSummary.html
@@ -3,10 +3,14 @@
 
 <head>
     <title> Professional Summery </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <style>
 h3{
     color:blue;
     background-color: rgba(255, 217, 0, 0.779);
+    font-family: 'Sofia', cursive;
 }
     </style>
 </head>
