--- a/personal.html
+++ b/personal.html
@@ -3,11 +3,15 @@
 
 <head>
     <title>Personal Details </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <style>
+        
         #title {
             color: rgb(68 117 119);
+            font-family: 'Sofia', cursive;
         }
-
         b{
             text-transform: uppercase;
             color: rgb(68 117 119)
