--- a/techStack.html
+++ b/techStack.html
@@ -14,13 +14,15 @@
         th,
         td {
             border: 1px solid rgb(19, 19, 25);
+            padding: 10px 10px 10px 10px;
+            text-align: center;
         }
     </style>
 
     <table>
         <tbodY>
             <tr>
-                &nbsp; <td rowspan="5">&nbsp; <b> Technology </b> &nbsp; </td>
+                <td rowspan="5"><b> Technology </b> </td>
                 <td> HTML5 + CSS </td>
             </tr>
 
