--- a/Project.html
+++ b/Project.html
@@ -2,20 +2,47 @@
 <html>
 <title> Assignment 2 </title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        font-family: 'Josefin Sans', sans-serif;
+    }
+
+    h2 {
+        background-color: cornflowerblue;
+    }
+
+    .name {
+        text-align: left;
+        padding-bottom: 30px;
+    }
+
+    #tag {
+        padding-bottom: 30px;
+    }
+    ul,li{
+        list-style-type: square;
+    }
+  
+</style>
+
 <body>
     <h2> Project Details </h2>
     <hr>
-    <b> Name:&nbsp;&nbsp; <u>Student Management</u> </b>
-    <br>
-    <br>
-    <b><u>Environment:</u></b> &nbsp;&nbsp;<mark>Angular 8,TypeScript,JavaScript (ES6),
-        HTML5, CSS, Bootstrap, GitHub, Dekstop GitHub, Agile and JIRA, IDE-VS Code </mark> <br>
-    <br>
-    <b>Team Size: </b>06 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    &nbsp;&nbsp; &nbsp; &nbsp; <b> Duration: </b><i> 2021 -1<sup> st </sup>- july till <u> present </u> </i>
+    <b class="name"> Name:<u>Student Management</u> </b>
     <br>
 
-    <br> <b>Project Discription:</b> This project is mainly used for student Management in collages, where It help to
+    <b id="tag"><u>Environment:</u></b><mark>Angular 8,TypeScript,JavaScript (ES6),
+        HTML5, CSS, Bootstrap, GitHub, Dekstop GitHub, Agile and JIRA, IDE-VS Code </mark> <br>
+    <br>
+    <b>Team Size:</b>06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Duration: </b><i> 2021 -1<sup> st </sup>- july till <u> present </u> </i>
+    <br>
+
+    <br> <b class="name">Project Discription:</b> This project is mainly used for student Management in collages, where
+    It help to
     manage student record <br> like student registration, student update information and to see all his or her academic
     activities like score card, attendance.
 
@@ -23,15 +50,16 @@
 
 
     <h3> <strong> Roles & resposibility </strong> </h3>
-    Designed and implemented the user interface using HTML 5 and CSS.
-    <br> Work Closely with backend developers for code integration.
-    <br> Identifying and trouleshooting issues with front end code.
-    <br>Worked on GIT as a version control.
-    <br> Used JIRA for bug tracking.
-    <br> Implemented project using angle SCRUM methodology.
-    <br> Involved in daily stand up meetings, sprint showcase and sprint retrospective.
-    <br> Involved in Fixing technical issues.
-
+    <ul>
+        <li> Designed and implemented the user interface using HTML 5 and CSS.</li>
+        <li> Work Closely with backend developers for code integration.</li>
+        <li>Identifying and trouleshooting issues with front end code.</li>
+        <li>Worked on GIT as a version control.</li>
+        <li>Used JIRA for bug tracking.</li>
+        <li>Implemented project using angle SCRUM methodology.</li>
+        <li>Involved in daily stand up meetings, sprint showcase and sprint retrospective.</li>
+        <li>Involved in Fixing technical issues.</li>
+    </ul>
     <hr>
 
 </body>
