--- a/professionalSummary.html
+++ b/professionalSummary.html
@@ -5,13 +5,22 @@
     <title> Professional Summery </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     <style>
-h3{
-    color:blue;
-    background-color: rgba(255, 217, 0, 0.779);
-    font-family: 'Sofia', cursive;
-}
+        h3 {
+            color: blue;
+            background-color: rgb(255, 217, 0, 0.779);
+            text-shadow: 5px 4px 3px rgb(180, 180, 239);
+        }
+
+        li {
+            padding-bottom: 10px;
+
+        }
+
+        * {
+            font-family: 'Josefin Sans', sans-serif;
+        }
     </style>
 </head>
 
@@ -19,10 +28,10 @@ h3{
     <h3> Carrer Objectives </h3>
     To Work in organization where i can learn and Grow My skills and help organisational growth.
 
-
     <h3> <u> Professional Summery </u> </h3>
     <ul>
-        <li> Having 1 years of experience in developing Single page Web Application using <span style="color:blue;"> Angular 8 </span> , HTML5
+        <li> Having 1 years of experience in developing Single page Web Application using <span style="color:blue;">
+                Angular 8 </span> , HTML5
             CSS3, Bootstrap 5, JavaScript, TypeScript. </li>
         <li> Experience on working with version control system -<span style="color:blue;"> GIT and GitHub</span> </li>
         <li> Experience Working with JIRA for user stories and bug tracking </li>
@@ -30,7 +39,7 @@ h3{
         <li> Working exposure on ID's like VS Code and Notepad++ </li>
         <li> Good Working experience under Agile methodologies environmenyt </li>
         <li> Experience in using Chrome Developer Tool for debugging and troushooting the code </li>
-        <li> Knowledge of <span style="font-size:large;"> NodeJS</span>  </li>
+        <li> Knowledge of <span style="font-size:large;"> NodeJS</span> </li>
         <li> Ability to work with people at all levels in the program</li>
 
     </ul>
@@ -39,4 +48,4 @@ h3{
 
 </body>
 
-</html> 
+</html>
