--- a/personal.html
+++ b/personal.html
@@ -4,17 +4,19 @@
 <head>
     <title>Personal Details </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <style>
-        
         #title {
             color: rgb(68 117 119);
             font-family: 'Sofia', cursive;
+            text-align: center;
         }
-        b{
+
+        b {
             text-transform: uppercase;
             color: rgb(68 117 119)
+            
         }
     </style>
 
@@ -22,7 +24,7 @@
 </head>
 
 <body>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h3 id="title">PROFILE PHOTO</h3>
+    <h3 id="title">PROFILE PHOTO</h3>
 
     <img src="Profile pic.png" width="200px" height="200px">
     <br>
