--- a/myHobbies.html
+++ b/myHobbies.html
@@ -2,9 +2,18 @@
 <html>
     <head>
 <title> My Hobbies </title>
+<style>
+summary{
+    background-color: cornflowerblue;
+}
+li{
+    list-style-type: circle;
+    padding-bottom: 10px;
+}
+</style>
 
     </head>
-
+     
     <body>
       
         <details> 
