--- a/education.html
+++ b/education.html
@@ -1,59 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title> Educational Details </title>
+    <title> Educational Details </title>
 </head>
+
 <body>
     <style>
         table,
         tr,
         th,
         td {
-          border: 1px solid rgb(19, 19, 25);
+            border: 1px solid rgb(19, 19, 25);
+            text-align: center;
+            padding: 10px;
         }
-      </style>
-      
+        table{
+            margin-right: 80px;
+        }
+    </style>
+
     <h3><u>Educational Details</u></h3>
     <hr>
 
     <table>
-<thead>
-    <tr>
-        <th>   Qualification    </th>
-        <th>   School / College   </th>
-        <th>   Board / University   </th>
-        <th>   Passout Year   </th>
-        <th>   Percentage   </th>
-    </tr>
-</thead>
+        <thead>
+            <tr>
+                <th> Qualification </th>
+                <th> School / College </th>
+                <th> Board / University </th>
+                <th> Passout Year </th>
+                <th> Percentage </th>
+            </tr>
+        </thead>
 
-<tbody>
-    <tr> 
-        <td> BE Civil </td>
-        <td> T.K.I.E.T. Warananagar </td>
-        <td> Shivaji University </td>
-        <td> 2018 </td>
-        <td> 70.69% </td>
-    </tr>
+        <tbody>
+            <tr>
+                <td> BE Civil </td>
+                <td> T.K.I.E.T. Warananagar </td>
+                <td> Shivaji University </td>
+                <td> 2018 </td>
+                <td> 70.69% </td>
+            </tr>
 
-    <tr> 
-        <td> Diploma in Civil </td>
-        <td> Government Polytechnic Miraj </td>
-        <td> MSBTE </td>
-        <td> 2015 </td>
-        <td> 76.67% </td>
-    </tr>
+            <tr>
+                <td> Diploma in Civil </td>
+                <td> Government Polytechnic Miraj </td>
+                <td> MSBTE </td>
+                <td> 2015 </td>
+                <td> 76.67% </td>
+            </tr>
 
-    <tr> 
-        <td> SSC </td>
-        <td> Vidyamandir Highscool, Kole </td>
-        <td> Pune </td>
-        <td> 2012 </td>
-        <td> 81.24% </td>
-    </tr>
+            <tr>
+                <td> SSC </td>
+                <td> Vidyamandir Highscool, Kole </td>
+                <td> Pune </td>
+                <td> 2012 </td>
+                <td> 81.24% </td>
+            </tr>
 
-</tbody>
+        </tbody>
     </table>
 
 </body>
+
 </html>
