--- a/cssLeaning.html
+++ b/cssLeaning.html
@@ -2,7 +2,22 @@
 <html>
 
 <head>
+<style>
+body{
+    background-image:url(Profile\ pic.png);
+    background-size: cover;
+background: plum;    
+}
+#roles{
+            margin-bottom: 50px;
+        }
+        #para{
+            margin-top: 100px;
+            border: 2px solid ;
+            border-radius: 20px;
+        }
 
+</style>
 </head>
 
 <body>
@@ -14,6 +29,11 @@
         would make &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br> and <small>guide me </small> in
         building a rewarding
         career at the same time enhancing my <span style="font-size: large;"> knowledge  </span> of <i style="color: blue; font-size: small;"> industry wide processes. </i>
+    </p>
+    <h2 id="roles"> Roles and Responsibilities </h2>
+
+    <p id="para">
+         This is para 
     </p>
 
 </body>
