--- a/contactUs.html
+++ b/contactUs.html
@@ -3,6 +3,24 @@
 
 <head>
     <title>Contact Us Page </title>
+    <style>
+
+input[type="submit"]{
+    border-radius: 10px;
+    width: 80px;
+    height: 50px;
+    color: blue;
+}
+input[type="text"]{
+    border-radius: 20px;
+    color: brown;
+    width: 100px;
+    height: 30px;
+    background-color: yellow;
+}
+
+
+    </style>
 </head>
 
 <body>
