--- a/professionalSummary.html
+++ b/professionalSummary.html
@@ -21,6 +21,19 @@
         * {
             font-family: 'Josefin Sans', sans-serif;
         }
+        h2::after{
+            content: "after this lectiure";
+        }
+        li::marker{
+            color: blue;
+        }
+        li::selection{
+            color: darkolivegreen;
+        }
+.CarrerObjectives::selection{
+    color: blueviolet;
+}
+
     </style>
 </head>
 
@@ -44,7 +57,7 @@
 
     </ul>
     <hr>
-
+    <h2>Professional Summery</h2>
 
 </body>
 
